--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/guide?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/guide?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.max-idle=10
@@ -8,10 +8,16 @@ spring.datasource.min-idle=5
 spring.datasource.initial-size=5
 TP.secretId = AKIDlKelcDhjiS2MRGw9C3f05uTmsjQsl3oJ
 TP.secretKey =OXQ7YkgMmzwfASXMvGMEqMeiV2OVLvKT
-avatar=http://coummunity-1300724762.cos.ap-guangzhou.myqcloud.com/\
-  111.png3092567a-c77c-4daf-9122-25231c3b15ef.jpg?sign=q-sign-algorithm%3Dsha1%26\
-  q-ak%3DAKIDlKelcDhjiS2MRGw9C3f05uTmsjQsl3oJ%26q-sign-time%3D1576677564%3B1577577\
-  564%26q-key-time%3D1576677564%3B1577577564%26q-header-list%3D%26q-url-param-list%3\
-  D%26q-signature%3D956f921c68f139c127316f0cb2e7d8cefff634fe
-server.port=8081
+avatar=	https://coummunity-1300724762.cos.ap-guangzhou.myqcloud.com/111.png1056f43b-f7c8-4d7d-9813-967557b6436d.jpg
+server.port=8082
+spring.servlet.multipart.max-request-size=300MB
+spring.servlet.multipart.max-file-size=10MB
+logging.file.name=logs/xundao.log
+logging.file.max-size=200MB
+logging.file.max-history=30
+logging.level.root=info
+#mybatis代码自动生成配置
+mybatis.type-aliases-package=com.chinafight.gongxiangdaoyou.entity
+mybatis.config-locations=classpath:mybatis/mybatis-config.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
