--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/guide?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://rm-8vb42689e55f04q9lao.mysql.zhangbei.rds.aliyuncs.com/guide?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=ak_root
+spring.datasource.password=ak1042491722
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
@@ -12,10 +12,13 @@ avatar=	https://coummunity-1300724762.cos.ap-guangzhou.myqcloud.com/111.png1056f
 server.port=8082
 spring.servlet.multipart.max-request-size=300MB
 spring.servlet.multipart.max-file-size=10MB
-logging.file.name=logs/xundao.log
+
 logging.file.max-size=200MB
 logging.file.max-history=30
 logging.level.root=info
+logging.path=/logs/xundao
+logging.config=classpath:logback-spring.xml
+
 #mybatis代码自动生成配置
 mybatis.type-aliases-package=com.chinafight.gongxiangdaoyou.entity
 mybatis.config-locations=classpath:mybatis/mybatis-config.xml
