图片上传逻辑修改

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ mybatis.type-aliases-package=com.chinafight.gongxiangdaoyou.entity
 mybatis.config-locations=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
+project-path = http://localhost:8082/img/
+#project-path = http://localhost:9999/tongcheng/img/
+#project-path = http://39.101.186.75:9999/tongcheng/img/
+
