--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,25 @@
+spring.host = 192.168.1.151:8083
+#spring.host = 47.93.102.239:9999/tongcheng
+
+# 本地
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://rm-8vb42689e55f04q9lao.mysql.zhangbei.rds.aliyuncs.com/guide?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=ak_root
-spring.datasource.password=ak1042491722
-spring.datasource.max-idle=10
-spring.datasource.max-wait=10000
-spring.datasource.min-idle=5
-spring.datasource.initial-size=5
-TP.secretId = AKIDlKelcDhjiS2MRGw9C3f05uTmsjQsl3oJ
-TP.secretKey =OXQ7YkgMmzwfASXMvGMEqMeiV2OVLvKT
-avatar=	https://coummunity-1300724762.cos.ap-guangzhou.myqcloud.com/111.png1056f43b-f7c8-4d7d-9813-967557b6436d.jpg
-server.port=8082
+spring.datasource.url=jdbc:mysql://localhost:3306/guide?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234
+
+server.port=8083
 spring.servlet.multipart.max-request-size=300MB
 spring.servlet.multipart.max-file-size=10MB
 
 logging.file.max-size=200MB
 logging.file.max-history=30
 logging.level.root=info
-logging.path=/logs/xundao
+logging.path=/logs/tongcheng
 logging.config=classpath:logback-spring.xml
 
 #mybatis代码自动生成配置
 mybatis.type-aliases-package=com.chinafight.gongxiangdaoyou.entity
-mybatis.config-locations=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
-project-path = http://localhost:8082/img/
-#project-path = http://localhost:9999/tongcheng/img/
-#project-path = http://39.101.186.75:9999/tongcheng/img/
+project-path = http://${spring.host}/img/
 
