--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.host = 192.168.1.151:8083
-#spring.host = 47.93.102.239:9999/tongcheng
+#spring.host = 192.168.1.151:8083
+spring.host = 47.93.102.239:9999/xundao
 
 # ±¾µØ
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/guide?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/guide2?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=1234
 
